--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "nwidart/laravel-modules": "^8.3",
+        "spatie/laravel-health": "^1.11",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
